# JOB-flow

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_OVERVIEW.md  BUILD_PLAN.md  DEPLOYMENT.md  DESIGN_NOTES.md  Dockerfile  FRONTEND_SETUP.md  LICENSE  PRODUCTION_ROADMAP.md  PRODUCT_SPEC.md  PWA_NOTES.md  QUICK_START.md  README.md  ROUTE_INVENTORY.md  config.example.yaml  index.html  nixpacks.toml  package-lock.json  package.json  pyproject.toml  render.yaml  run.py  seed_users.py  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
adapters/: __init__.py  greenhouse.py  indeed.py  lever.py
alembic/: README.md  env.py
alembic/versions/: 0001_tenants_and_users.py  0002_domain_tables.py  0004_automation_runs.py  (+1 more)
autoapply/: __init__.py  analytics.py  auth.py  auth_store.py  cli.py  evidence.py  models.py  run.py  server.py
core/: __init__.py  autofill.py  browser.py  router.py  storage.py  tailor.py
docs/: DEPLOY_FREE.md  STAFF_DASHBOARDS.md  accessibility_notes.md  analytics_events.md  auth_and_routing.md  autoapplyer_frontend_overview.md  dwp_pilot_technical_note.md  finishing_notes.md  pilot_demo_script.md  pwa.md
public/: ICONS_README.md  manifest.json  manifest.webmanifest  offline.html  sw.js
scripts/: generate-icons.js  run-local.sh  seed_demo_data.py
src/: App.tsx  DESIGN_SYSTEM.md  SIDEBAR_INTEGRATION.md  index.css  main.tsx  vite-env.d.ts
tests/: __init__.py  test_adapter_smoke.py  test_adapters_base.py  test_api_endpoints.py  test_batch_applications.py  test_caps_and_pause.py  test_config.py  test_evidence.py  test_logging.py  test_router.py  test_run_state_api.py  test_storage.py  test_workday_adapter.py
ui/: .gitkeep
(+132 files in other folders)
